@@ -23,7 +23,8 @@ IMPROVEMENTS:
   (phunt via mahadev)
 
 NEW FEATURES:
-
+  ZOOKEEPER-729. Java client API to recursively delete a subtree. (Kay
+  Kay via henry)
 
 Release 3.3.0 - 2010-03-24
 
